--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "engines": {
-    "npm": "6.14.4"
+    "npm": "6.14.4",
+    "node": "12.16.x"
   },
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
@@ -22,7 +23,7 @@
     "uuid": "^7.0.0"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "node server.js",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
