--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "threadit-frontend",
   "version": "0.1.0",
   "private": true,
-  "engines":{
+  "engines": {
     "node": "10.16.0"
   },
   "dependencies": {
@@ -18,6 +18,7 @@
     "react-scripts": "3.4.0",
     "react-stripe-checkout": "^2.6.3",
     "redux": "^4.0.5",
+    "rsuite": "^4.8.1",
     "semantic-ui-react": "^0.88.2",
     "uuid": "^7.0.0"
   },
