--- a/package.json
+++ b/package.json
@@ -15,11 +15,12 @@
     "react-redux": "^7.2.0",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.4.0",
+    "react-scripts": "^3.4.3",
     "react-stripe-checkout": "^2.6.3",
     "redux": "^4.0.5",
     "rsuite": "^4.8.1",
     "semantic-ui-react": "^0.88.2",
+    "serialize-javascript": ">=3.1.0",
     "uuid": "^7.0.0"
   },
   "scripts": {
