--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "uuid": "^7.0.0"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "node index.js",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
