--- a/package.json
+++ b/package.json
@@ -19,13 +19,16 @@
     "react-stripe-checkout": "^2.6.3",
     "redux": "^4.0.5",
     "semantic-ui-react": "^0.88.2",
+    "serve": "^11.3.2",
     "uuid": "^7.0.0"
   },
   "scripts": {
-    "start": "node index.js",
+    "dev": "react-scripts start",
+    "start": "serve -s build",
     "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "test": "react-scripts test --env=jsdom",
+    "eject": "react-scripts eject",
+    "heroku-postbuild": "npm run build"
   },
   "eslintConfig": {
     "extends": "react-app"
